[gd_scene load_steps=11 format=3 uid="uid://bcmdh6sv5mepl"]

[ext_resource type="Theme" uid="uid://b3kq74llqlv3x" path="res://Resources/Json/MinimalUI.tres" id="1_d5sny"]
[ext_resource type="Script" uid="uid://dwwn2tcj7po2m" path="res://DeckEditor/deck_editor.gd" id="1_ppl21"]
[ext_resource type="Texture2D" uid="uid://bk616vaur2fd2" path="res://Resources/Images/filter.png" id="2_psw1p"]
[ext_resource type="Texture2D" uid="uid://brkiomx2rb8wd" path="res://Resources/Images/filter_pressed.png" id="3_cm8an"]
[ext_resource type="Texture2D" uid="uid://186i4ui484qm" path="res://Resources/Images/filter_hovered.png" id="4_d5sny"]
[ext_resource type="PackedScene" uid="uid://ecm7t8qssguc" path="res://Resources/Cards/card_hover_panel.tscn" id="5_u50s5"]
[ext_resource type="Script" uid="uid://bu33ndglsq2ou" path="res://DeckEditor/filter_panel.gd" id="6_0tsrf"]
[ext_resource type="Script" uid="uid://cxykw1xj63ex1" path="res://DeckEditor/binder_cards.gd" id="7_d5sny"]
[ext_resource type="Script" uid="uid://bpr6s1igxy2bp" path="res://json_importer.gd" id="7_psw1p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_psw1p"]
bg_color = Color(0, 0, 0, 1)

[node name="DeckEditor" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_d5sny")
script = ExtResource("1_ppl21")

[node name="HoverPanel" parent="." instance=ExtResource("5_u50s5")]
visible = false
top_level = true
layout_mode = 2
offset_bottom = 556.846

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 52.0
offset_right = 3061.0
offset_bottom = 2429.0
scale = Vector2(0.35, 0.35)
theme = ExtResource("1_d5sny")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_d5sny")

[node name="HeroArenaLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_d5sny")
text = "Hero + Arena"

[node name="HeroArenaContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
theme_override_constants/separation = 20

[node name="DeckLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_d5sny")
text = "Deck"

[node name="MainDeckGridContainer" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 5

[node name="InventoryLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_d5sny")
text = "Inventory"

[node name="InventoryGridContainer" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
columns = 5

[node name="MaybeLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Not saved to Fabrary decklists, just used to store interesting cards with decks."
mouse_filter = 1
theme = ExtResource("1_d5sny")
text = "Maybe (?)"

[node name="MaybeGridContainer" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
columns = 5

[node name="BinderLabel" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.757093
anchor_top = 0.00998336
anchor_right = 0.805494
anchor_bottom = 0.0341938
theme = ExtResource("1_d5sny")
theme_override_font_sizes/font_size = 16
text = "Binder:"
metadata/_edit_use_anchors_ = true

[node name="BinderList" type="OptionButton" parent="."]
custom_minimum_size = Vector2(150, 25)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.00775194
anchor_right = 0.990311
anchor_bottom = 0.0354374
grow_horizontal = 0
theme = ExtResource("1_d5sny")
metadata/_edit_use_anchors_ = true

[node name="BinderCards" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -351.0
offset_top = -424.5
offset_right = -12.0
offset_bottom = 437.5
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("7_d5sny")

[node name="HBoxContainer" type="HBoxContainer" parent="BinderCards"]
layout_mode = 0
offset_left = 9.0
offset_top = 8.0
offset_right = 336.0
offset_bottom = 41.0

[node name="SortLabel" type="Label" parent="BinderCards/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_d5sny")
theme_override_font_sizes/font_size = 16
text = "Sort:"

[node name="SortList" type="OptionButton" parent="BinderCards/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_d5sny")
autowrap_mode = 3
item_count = 10
popup/item_0/text = "Name ASC"
popup/item_0/id = 4
popup/item_1/text = "Pow ASC"
popup/item_1/id = 0
popup/item_2/text = "Def ASC"
popup/item_2/id = 1
popup/item_3/text = "Pitch ASC"
popup/item_3/id = 2
popup/item_4/text = "Cost ASC"
popup/item_4/id = 3
popup/item_5/text = "Name DES"
popup/item_5/id = 5
popup/item_6/text = "Pow DES"
popup/item_6/id = 6
popup/item_7/text = "Def DES"
popup/item_7/id = 7
popup/item_8/text = "Pitch DES"
popup/item_8/id = 8
popup/item_9/text = "Cost DES"
popup/item_9/id = 9

[node name="SearchBox" type="LineEdit" parent="BinderCards/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_d5sny")
placeholder_text = "\"legendary\"..etc"

[node name="FilterButton" type="TextureButton" parent="BinderCards/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_d5sny")
toggle_mode = true
texture_normal = ExtResource("3_cm8an")
texture_pressed = ExtResource("2_psw1p")
texture_hover = ExtResource("4_d5sny")
ignore_texture_size = true
stretch_mode = 0

[node name="BinderCardsScroll" type="ScrollContainer" parent="BinderCards"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -381.5
offset_right = 7.0
offset_bottom = 418.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("1_d5sny")
horizontal_scroll_mode = 0

[node name="BinderCardsVBox" type="VBoxContainer" parent="BinderCards/BinderCardsScroll"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource("1_d5sny")
theme_override_constants/separation = 210

[node name="FilterPanel" type="Panel" parent="BinderCards"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -607.0
offset_top = 42.0
offset_bottom = 521.0
grow_horizontal = 0
theme = ExtResource("1_d5sny")
theme_override_styles/panel = SubResource("StyleBoxFlat_psw1p")
script = ExtResource("6_0tsrf")

[node name="ScrollContainer" type="ScrollContainer" parent="BinderCards/FilterPanel"]
layout_mode = 0
offset_right = 606.0
offset_bottom = 441.0

[node name="VBoxContainer" type="VBoxContainer" parent="BinderCards/FilterPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_d5sny")
theme_override_constants/separation = 4

[node name="SpinBoxGridContainer" type="GridContainer" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/v_separation = 8
columns = 8

[node name="PitchSpinBox" type="SpinBox" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer/SpinBoxGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
min_value = -1.0
max_value = 6.0
value = -1.0
prefix = "Pitch"

[node name="CostSpinBox" type="SpinBox" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer/SpinBoxGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
min_value = -1.0
max_value = 40.0
value = -1.0
prefix = "Cost"

[node name="DefenseSpinBox" type="SpinBox" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer/SpinBoxGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
min_value = -1.0
max_value = 40.0
value = -1.0
prefix = "Def"

[node name="PowerSpinBox" type="SpinBox" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer/SpinBoxGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
min_value = -1.0
max_value = 40.0
value = -1.0
prefix = "Atk"

[node name="LifeSpinBox" type="SpinBox" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer/SpinBoxGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
min_value = -1.0
max_value = 40.0
value = -1.0
prefix = "Life"

[node name="IntellectSpinBox" type="SpinBox" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer/SpinBoxGridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
min_value = -1.0
max_value = 40.0
value = -1.0
prefix = "Int"

[node name="ClassLabel" type="Label" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
text = "Class"

[node name="ClassGridContainer" type="GridContainer" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = -3
columns = 4

[node name="Rarity" type="Label" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
text = "Rarity"

[node name="RarityGridContainer" type="GridContainer" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = -3
columns = 4

[node name="TypeLabel" type="Label" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
text = "Type"

[node name="TypeGridContainer" type="GridContainer" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = -3
columns = 4

[node name="SubTypeLabel" type="Label" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
text = "SubType"

[node name="SubTypeGridContainer" type="GridContainer" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = -3
columns = 4

[node name="Hero" type="Label" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
text = "Hero"

[node name="HeroGridContainer" type="GridContainer" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = -3
columns = 4

[node name="Talents" type="Label" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
text = "Talent"

[node name="TalentGridContainer" type="GridContainer" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = -3
columns = 4

[node name="Keywords" type="Label" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_d5sny")
text = "Talent"

[node name="KeywordGridContainer" type="GridContainer" parent="BinderCards/FilterPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = -3
columns = 4

[node name="ClearFiltersButton" type="Button" parent="BinderCards/FilterPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -33.0
offset_right = 102.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_d5sny")
text = "Clear Filters"

[node name="SetFiltersButton" type="Button" parent="BinderCards/FilterPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -93.5
offset_top = -32.0
offset_right = -0.5
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
text = "Set Filters"

[node name="MainMenuButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
offset_left = 3.0
offset_top = 5.0
offset_right = 53.0
offset_bottom = 36.0
theme = ExtResource("1_d5sny")
text = "Back
"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -450.0
offset_right = 330.0
offset_bottom = 31.0
grow_horizontal = 2
theme = ExtResource("1_d5sny")
theme_override_constants/separation = 5

[node name="AddDeckButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_d5sny")
text = "Add Deck"

[node name="LoadDeckButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_d5sny")
text = "Load Deck"

[node name="DeckListOptions" type="OptionButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_d5sny")
text_overrun_behavior = 3

[node name="SaveDeckButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_d5sny")
text = "Save Deck"

[node name="SaveDeckAsButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_d5sny")
text = "Save As..."

[node name="ExportDeckButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_d5sny")
text = "Export (clipboard)"

[node name="DeckTypeLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_d5sny")
theme_override_font_sizes/font_size = 24
text = "Deck Type"

[node name="DeckTypeOptions" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_d5sny")
selected = 0
item_count = 5
popup/item_0/text = "Classic Constructed"
popup/item_0/id = 0
popup/item_1/text = "Blitz"
popup/item_1/id = 1
popup/item_2/text = "Project Blue"
popup/item_2/id = 2
popup/item_3/text = "Commoner"
popup/item_3/id = 3
popup/item_4/text = "UPF"
popup/item_4/id = 4

[node name="Node" type="Node" parent="."]
script = ExtResource("7_psw1p")

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
